test/mutation_analysis/s0044_wildcard_matching/hafis/ablation_o3_full/mutants/2/result.txt
./test/mutation_analysis/s0044_wildcard_matching/hafis/ablation_o3_full/mutants/2/Solution.java:17: error: unreachable statement
        while (false) {
                      ^
1 error
